# black-fleet

./: .gitignore  Cargo.toml
black-fleet-core/: Cargo.toml  index.html
black-fleet-core/src/: app.rs  lib.rs  main.rs
black-fleet-core/src/app/: camera.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs
