[package]
name = "black-fleet-core"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "29.0"
winit = { version = "0.30", features = ["android-native-activity"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
cgmath = "0.18"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
