[package]
name = "black-fleet-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = "29.0"
winit = { version = "0.30", features = ["android-native-activity"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = { version = "0.11" }
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Location",
    "Window",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
